SUB-ENTITY/SUPER-ENTITY EXPERIMENT BEGINS HERE
[#166580361] https://coolambience.com site

[Adhoc]
 \
  * It's XJ Music (TM) until we get the certificate

[#167044451] Test suite should execute entire Java test suite without stopping
 \
  * [core/CoreIT] Integration tests inherit @After method to call shutdown hook after test

EDIT THESE NOTES All tests of Java modules pass, however:

[#166598919] Edit Chain, Program + Instrument in v2 UX
 \
  * [ui/hub-ui] Stub Program and Instrument sub-entity editing for now, pending implementation of program-ui and instrument-ui

[#167585908] Correct fabrication with v2 core
 \
  * [core/ingest/cache] invalidation should not halt worker

[#150279494] On mobile, open menu and make selection, expect menu to close

[#167585930] UI shows errors returned in payload

[#166708597] Instrument model handles all of its own entities
  + Audio model handles all of its own entities, ala Segments #166132897
  + Audio Child Entities are identified and related by UUID (not id), ala Segments #166273140
  + Audio is an interface provided by a PatternFactory, ala Segment #166317849
  + Audio have no child SQL entities, only content JSON, ala Segment #166109389
  + Audio Child entities have UUID (not id) appropriately non-dependent on SQL-like entity id, ala Segment #166273140
  + MIGRATION TRANSFORMS PRE-EXISTING AUDIOS INTO NEW JSON OBJECTS!
  + Deprecate AudioErase job
  + Deprecate AudioClone job
  + Audio erasure on S3 will be moved to a new universal garbage collection job
  + Set all content of instrument, cloned from another source instrument, with all new UUID, preserving relationships.
  + Instrument doesn't actually have density property; it's computed by averaging the density of all its sub entities
  + JSON Serialization + Deserialization unit tests for meme, audio, audio_chord, and audio_event

[#166690830] Program model handles all of its own entities
  + Program model handles all of its own entities, ala Segments #166132897
  + Prog